[gd_scene load_steps=3 format=3 uid="uid://bhuosep1twjl0"]

[ext_resource type="Script" path="res://control.gd" id="1_x8hjk"]

[sub_resource type="LabelSettings" id="LabelSettings_qtri6"]
font_size = 27

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x8hjk")

[node name="Menu" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.307
anchor_bottom = 0.185
offset_right = -346.96
offset_bottom = -102.2

[node name="StartButton" type="Button" parent="Menu"]
layout_mode = 2
text = "Start"

[node name="GameButtons" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 1032.0
offset_top = 48.0
offset_right = 1264.0
offset_bottom = 656.0
current_tab = 0

[node name="Dice" type="Control" parent="GameButtons"]
layout_mode = 2
metadata/_tab_index = 0

[node name="RollDiceButton" type="Button" parent="GameButtons/Dice"]
layout_mode = 0
offset_left = 24.0
offset_top = 17.0
offset_right = 208.0
offset_bottom = 60.0
text = "Roll Dice"

[node name="ResultLabel" type="Label" parent="GameButtons/Dice"]
layout_mode = 2
offset_left = 24.0
offset_top = 73.0
offset_right = 208.0
offset_bottom = 113.0
label_settings = SubResource("LabelSettings_qtri6")
horizontal_alignment = 1
autowrap_mode = 3

[node name="DiceOption1" type="Button" parent="GameButtons/Dice"]
layout_mode = 2
offset_left = 24.0
offset_top = 129.0
offset_right = 160.0
offset_bottom = 169.0

[node name="DiceOption1L" type="Button" parent="GameButtons/Dice"]
layout_mode = 2
offset_left = 168.0
offset_top = 129.0
offset_right = 208.0
offset_bottom = 169.0
text = "L"

[node name="DiceOption2" type="Button" parent="GameButtons/Dice"]
layout_mode = 0
offset_left = 24.0
offset_top = 177.0
offset_right = 160.0
offset_bottom = 217.0

[node name="DiceOption2L" type="Button" parent="GameButtons/Dice"]
layout_mode = 0
offset_left = 168.0
offset_top = 177.0
offset_right = 208.0
offset_bottom = 217.0
text = "L"

[node name="DiceOption3L" type="Button" parent="GameButtons/Dice"]
layout_mode = 0
offset_left = 168.0
offset_top = 225.0
offset_right = 208.0
offset_bottom = 265.0
text = "L"

[node name="DiceOption3" type="Button" parent="GameButtons/Dice"]
layout_mode = 0
offset_left = 24.0
offset_top = 225.0
offset_right = 160.0
offset_bottom = 265.0

[node name="Card" type="VSplitContainer" parent="GameButtons"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Leader" type="VSplitContainer" parent="GameButtons"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[connection signal="dice_rolled" from="." to="." method="_on_dice_rolled"]
[connection signal="dice_selected" from="." to="." method="_on_dice_selected"]
